--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
-<head><h1>달력</h1>
+<head><a href="index.html"><h1>달력</h1></a>
 <meta charset="utf-8">
-<title>달력-1월</title>
+<title>달력</title>
 </head>
 	
 <body>
