--- a/1.html
+++ b/1.html
@@ -1,27 +1,43 @@
 <!doctype html>
 <html>
-<head><h1><a href="index.html">달력</a></h1>
+<head>
 <meta charset="utf-8">
-<title>달력-1월</title>
+<title>달력</title>
+	<style>
+	a{
+		color:grey;text-decoration:none;font-weight: lighter
+	}		
+	li{
+		list-style-type: none;
+	}
+	h1{
+		text-align:center;
+		border-bottom:2px solid lightgray;
+		padding:20px;
+		margin:0px;
+	}
+	ul{
+		border-right: 2px solid lightgray;
+		width:150px;
+		}
+</style>
 </head>
 	
 <body>
-<img src="coding.jpg" width="450">
- <ul>
-	<li><a href="1.html">1월</a></li>
-	<li><a href="2.html">2월</a></li>
-	<li><a href="3.html">3월</a></li>
-	<li><a href="4.html">4월</a></li>
-	<li><a href="5.html">5월</a></li>
-	<li><a href="6.html">6월</a></li>
-	<li><a href="7.html">7월</a></li>
-	<li><a href="8.html">8월</a></li>
-	<li><a href="9.html">9월</a></li>
-	<li><a href="10.html">10월</a></li>
-	<li><a href="11.html">11월</a></li>
-	<li><a href="12.html">12월</a></li>
+<a href="index.html" style="color:black;font-size:14px"><h1>달력</h1></a>
+ <ul style="text-align: center; padding:0" class="solid">
+	<li><a href="1.html">3월</a></li>
+	<li><a href="2.html">4월</a></li>
+	<li><a href="3.html">5월</a></li>
+ <!--
+	<li><a href="4.html">6월</a></li>
+	<li><a href="5.html">7월</a></li>
+	<li><a href="6.html">8월</a></li>
+	<li><a href="7.html">9월</a></li>
+	<li><a href="8.html">10월</a></li>
+	<li><a href="9.html">11월</a></li>
+	<li><a href="10.html">12월</a></li>
+	-->
 </ul>
-	<h2>1월</h2>
-	아무것도 안함ㅎ
 </body>
 </html>
