--- a/index.html
+++ b/index.html
@@ -1,25 +1,46 @@
 <!doctype html>
 <html>
-<head><a href="index.html"><h1>달력</h1></a>
+<head>
 <meta charset="utf-8">
 <title>달력</title>
+	<style>
+		body{
+			margin:2%;
+		}
+		a{
+			color:grey;text-decoration:none;font-weight: lighter
+		}		
+		li{
+			list-style-type: none;
+		}
+		h1{
+			text-align:center;
+			border-bottom:2px solid lightgray;
+			padding:20px;
+			margin:0px;
+		}
+		ul{
+			border-right: 2px solid lightgray;
+			width:150px;
+			}
+</style>
 </head>
 	
 <body>
-<img src="coding.jpg" width="450">
- <ul>
-	<li><a href="1.html">1월</a></li>
-	<li><a href="2.html">2월</a></li>
-	<li><a href="3.html">3월</a></li>
-	<li><a href="4.html">4월</a></li>
-	<li><a href="5.html">5월</a></li>
-	<li><a href="6.html">6월</a></li>
-	<li><a href="7.html">7월</a></li>
-	<li><a href="8.html">8월</a></li>
-	<li><a href="9.html">9월</a></li>
-	<li><a href="10.html">10월</a></li>
-	<li><a href="11.html">11월</a></li>
-	<li><a href="12.html">12월</a></li>
+<a href="index.html" style="color:black;font-size:14px"><h1>달력</h1></a>
+ <ul style="text-align: right; margin:0px;padding:1.5%;" class="solid">
+	<li><a href="1.html">3월</a></li>
+	<li><a href="2.html">4월</a></li>
+	<li><a href="3.html">5월</a></li>
+ <!--
+	<li><a href="4.html">6월</a></li>
+	<li><a href="5.html">7월</a></li>
+	<li><a href="6.html">8월</a></li>
+	<li><a href="7.html">9월</a></li>
+	<li><a href="8.html">10월</a></li>
+	<li><a href="9.html">11월</a></li>
+	<li><a href="10.html">12월</a></li>
+	-->
 </ul>
 </body>
 </html>
